--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>5.2.19.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
